--- a/src/Forms/PrincipalEmpleado.form
+++ b/src/Forms/PrincipalEmpleado.form
@@ -8,6 +8,9 @@
     <SyntheticProperty name="formSizePolicy" type="int" value="1"/>
     <SyntheticProperty name="generateCenter" type="boolean" value="false"/>
   </SyntheticProperties>
+  <Events>
+    <EventHandler event="windowOpened" listener="java.awt.event.WindowListener" parameters="java.awt.event.WindowEvent" handler="formWindowOpened"/>
+  </Events>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="0"/>
     <AuxValue name="FormSettings_autoSetComponentName" type="java.lang.Boolean" value="false"/>
@@ -118,19 +121,16 @@
     <Component class="javax.swing.JButton" name="btClientes">
       <Properties>
         <Property name="text" type="java.lang.String" value="Clientes"/>
-        <Property name="actionCommand" type="java.lang.String" value="Clientes"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btEmpleados">
       <Properties>
         <Property name="text" type="java.lang.String" value="Empleados"/>
-        <Property name="actionCommand" type="java.lang.String" value="Empleados"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btReportes">
       <Properties>
         <Property name="text" type="java.lang.String" value="Reportes"/>
-        <Property name="actionCommand" type="java.lang.String" value="Reportes"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
@@ -168,7 +168,6 @@
     <Component class="javax.swing.JButton" name="btCerrarSesion">
       <Properties>
         <Property name="text" type="java.lang.String" value="Cerrar sesion"/>
-        <Property name="actionCommand" type="java.lang.String" value="Cerrar sesion"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lbPrincipalEmpleado">
