--- a/src/Forms/PrincipalAdmin.form
+++ b/src/Forms/PrincipalAdmin.form
@@ -56,10 +56,10 @@
               <EmptySpace max="-2" attributes="0"/>
               <Component id="btCerrarSesion" min="-2" pref="16" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
-              <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="imgVentas" alignment="3" min="-2" max="-2" attributes="0"/>
+              <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="imgCompras" alignment="1" min="-2" max="-2" attributes="0"/>
                   <Component id="imgReportes" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="imgVentas" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -100,7 +100,7 @@
     <Component class="javax.swing.JLabel" name="imgVentas">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Imagenes/Ventas.png"/>
+          <Image iconType="3" name="/Imagenes/ventas.png"/>
         </Property>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.LineBorderInfo">
